<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sleonegtb.accountopeningapp.Uploads">

    <android.support.v7.widget.CardView
        android:layout_margin="30dp"
        app:cardCornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fupload"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>


            <Spinner
                android:id="@+id/file_type"
                android:background="@drawable/spinnerbg"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:prompt="@string/country_prompt" />

            <ImageView
                android:contentDescription="@string/fupload"
                android:id="@+id/callOption"
                android:src="@drawable/ic_photo_camera_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"/>


            <ImageView
                android:contentDescription="@string/vimg"
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"/>

            <Button
                android:id="@+id/upload_btn"
                android:background="@drawable/buttonstyle"
                android:text="@string/upload"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
