<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sleonegtb.accountopeningapp.CaptureSignatureActivity">

    <android.support.v7.widget.CardView
        android:layout_margin="30dp"
        app:cardCornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_sign"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />


            <Button
                android:id="@+id/signature"
                android:background="@drawable/buttonstyle"
                android:text="@string/g_sign"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/next_btn_sign"
                android:visibility="gone"
                android:background="@drawable/buttonstyle"
                android:text="@string/next"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="45dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
